<resources>
    <string name="app_name">Sonic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flight_number">Flight number</string>
    <string name="mission_name">Mission name</string>
    <string name="launch_date">Launch date</string>
    <string name="launch_site">Launch site</string>
    <string name="block">Block</string>
    <string name="reused">Reused</string>
    <string name="flight">Flight</string>
    <string name="landing">Landing</string>
    <string name="cores">Cores</string>
    <string name="payloads">Payloads</string>
    <string name="links">Links</string>

    <string name="no_info">No info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="sort_by">Sort by:</string>
    <string name="newest">Flight number: newest</string>
    <string name="oldest">Flight number: oldest</string>

</resources>