<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.yuyu.sonic.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flight_img"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toImage="@{String.valueOf(viewModel.flightSelect.links.mission_patch_small)}"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/flight_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/flight_number"
            app:layout_constraintEnd_toEndOf="@id/flight_img"
            app:layout_constraintStart_toStartOf="@id/flight_img"
            app:layout_constraintTop_toBottomOf="@id/flight_img" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(viewModel.flightSelect.flight_number)}"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/flight_number_tv"
            app:layout_constraintStart_toStartOf="@id/flight_number_tv"
            app:layout_constraintTop_toBottomOf="@id/flight_number_tv"
            tools:text="1" />

        <TextView
            android:id="@+id/mission_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mission_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number" />

        <TextView
            android:id="@+id/mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.flightSelect.mission_name}"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/mission_name_tv"
            app:layout_constraintStart_toStartOf="@id/mission_name_tv"
            app:layout_constraintTop_toBottomOf="@id/mission_name_tv"
            tools:text="FalconSat" />

        <TextView
            android:id="@+id/launch_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/launch_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/launch_date_tv"
            app:layout_constraintStart_toStartOf="@id/launch_date_tv"
            app:layout_constraintTop_toBottomOf="@id/launch_date_tv"
            app:toDate="@{viewModel.flightSelect.launch_date_unix}"
            tools:text="25/03/2006 06:30:00" />

        <TextView
            android:id="@+id/launch_site_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/launch_site"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <TextView
            android:id="@+id/site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.flightSelect.launch_site.site_name}"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/launch_site_tv"
            app:layout_constraintStart_toStartOf="@id/launch_site_tv"
            app:layout_constraintTop_toBottomOf="@id/launch_site_tv"
            tools:text="Kwajaiein Atoil" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cores_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/site">

            <ImageView
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cores_layout" />

            <TextView
                android:id="@+id/cores_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/cores"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <ImageView
                android:id="@+id/click_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:src="@drawable/arrow_down"
                app:layout_constraintBottom_toBottomOf="@id/cores_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cores_tv" />

            <ImageView
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cores_tv" />

            <include
                android:id="@+id/cores_item"
                layout="@layout/item_cores"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/line2" />

            <ImageView
                android:id="@+id/line3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@id/cores_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/payloads_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cores_layout">


            <TextView
                android:id="@+id/payloads_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/payloads"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/payloads_layout" />

            <ImageView
                android:id="@+id/click_arrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:src="@drawable/arrow_down"
                app:layout_constraintBottom_toBottomOf="@id/payloads_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/payloads_tv" />

            <ImageView
                android:id="@+id/line4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payloads_tv" />

            <TextView
                android:id="@+id/no_info1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/no_info"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/payloads_layout"
                app:layout_constraintTop_toBottomOf="@id/line4" />

            <ImageView
                android:id="@+id/line5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@id/payloads_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/links_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payloads_layout"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/links_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/links"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/links_layout" />

            <ImageView
                android:id="@+id/click_arrow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:src="@drawable/arrow_down"
                app:layout_constraintBottom_toBottomOf="@id/links_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/links_tv" />

            <ImageView
                android:id="@+id/line6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/links_tv" />

            <TextView
                android:id="@+id/no_info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/no_info"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/links_layout"
                app:layout_constraintTop_toBottomOf="@id/line6" />

            <ImageView
                android:id="@+id/line7"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@id/links_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>